--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "concurrently": "^5.3.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0"
